--- a/kie-server/src/main/docker/eap/Dockerfile
+++ b/kie-server/src/main/docker/eap/Dockerfile
@@ -1,5 +1,5 @@
 ####### BASE ############
-FROM ce-registry.usersys.redhat.com/jboss-eap-6/eap64:1.2
+FROM ce-registry.usersys.redhat.com/jboss-eap-6/eap64:1.3
 
 ####### MAINTAINER ############
 MAINTAINER "Roger Martinez" "romartin@redhat.com"
@@ -27,22 +27,16 @@ ADD etc/kie-server-users.properties $JBOSS_HOME/standalone/configuration/kie-ser
 ADD etc/kie-server-roles.properties $JBOSS_HOME/standalone/configuration/kie-server-roles.properties
 ADD etc/standalone-full-kie-server.xml $JBOSS_HOME/standalone/configuration/standalone-full-kie-server.xml
 
-# Custom kie-server Wildfly startup scripts.
+# Custom kie-server WildFly startup scripts.
 ADD etc/start_kie-server.sh $JBOSS_HOME/bin/start_kie-server.sh
 
 # Add the kie-server WAR artifact from the assembly result.
 ADD maven/kie-server.war $JBOSS_HOME/standalone/deployments/kie-server-archive.war
 
-# The project site report for the build
-ADD maven/site $JBOSS_HOME/standalone/deployments/site.war
-
 # Work with unpacked WAR archives in EAP, so other images can override webapp files (such as persistence.xml,etc)
 RUN unzip -q -d $JBOSS_HOME/standalone/deployments/kie-server.war $JBOSS_HOME/standalone/deployments/kie-server-archive.war && \
 touch $JBOSS_HOME/standalone/deployments/kie-server.war.dodeploy && \
-rm -rf $JBOSS_HOME/standalone/deployments/kie-server-archive.war && \
-unzip -q -d $JBOSS_HOME/standalone/deployments/site.war $JBOSS_HOME/standalone/deployments/site.war/kie-server-site.jar && \
-rm -rf $JBOSS_HOME/standalone/deployments/site.war/kie-server-site.jar && \
-touch $JBOSS_HOME/standalone/deployments/site.war.dodeploy
+rm -rf $JBOSS_HOME/standalone/deployments/kie-server-archive.war
 
 # Set right permissions for jboss user.
 RUN chown -R jboss:jboss $JBOSS_HOME/standalone/deployments/* && \
