--- a/kie-server/src/main/docker/wildfly/Dockerfile
+++ b/kie-server/src/main/docker/wildfly/Dockerfile
@@ -1,5 +1,5 @@
 ####### BASE ############
-FROM jboss/wildfly:8.1.0.Final
+FROM jboss/wildfly:10.0.0.Final
 
 ####### MAINTAINER ############
 MAINTAINER "Roger Martinez" "romartin@redhat.com"
@@ -15,34 +15,28 @@ USER root
 RUN echo "root:rootman" | chpasswd && \
 echo "jboss:jboss" | chpasswd
 
-####### KIE-SERVER & WILDFLY8 CONFIG FILES ############
-# Latest WAR from Maven repository & Custom Wildfly configuration files
+####### KIE-SERVER & WildFly10 CONFIG FILES ############
+# Latest WAR from Maven repository & Custom WildFly configuration files
 # There is an issue in Docker with ADD command.
 # When a file is added into the container's filesystem, the file owner is always root, instead of the current running user.
 # See https://github.com/docker/docker/issues/5110
 # The workaround is doing a chown using root user and then switchback to jboss user.
 
-# Wildfly custom configuration.
+# WildFly custom configuration.
 ADD etc/kie-server-users.properties $JBOSS_HOME/standalone/configuration/kie-server-users.properties
 ADD etc/kie-server-roles.properties $JBOSS_HOME/standalone/configuration/kie-server-roles.properties
 ADD etc/standalone-full-kie-server.xml $JBOSS_HOME/standalone/configuration/standalone-full-kie-server.xml
 
-# Custom kie-server Wildfly startup scripts.
+# Custom kie-server WildFly startup scripts.
 ADD etc/start_kie-server.sh $JBOSS_HOME/bin/start_kie-server.sh
 
 # Add the kie-server WAR artifact from the assembly result.
 ADD maven/kie-server.war $JBOSS_HOME/standalone/deployments/kie-server-archive.war
 
-# The project site report for the build
-ADD maven/site $JBOSS_HOME/standalone/deployments/site.war
-
 # Work with unpacked WAR archives in WildFly, so other images can override webapp files (such as persistence.xml,etc)
 RUN unzip -q -d $JBOSS_HOME/standalone/deployments/kie-server.war $JBOSS_HOME/standalone/deployments/kie-server-archive.war && \
 touch $JBOSS_HOME/standalone/deployments/kie-server.war.dodeploy && \
-rm -rf $JBOSS_HOME/standalone/deployments/kie-server-archive.war && \
-unzip -q -d $JBOSS_HOME/standalone/deployments/site.war $JBOSS_HOME/standalone/deployments/site.war/kie-server-site.jar && \
-rm -rf $JBOSS_HOME/standalone/deployments/site.war/kie-server-site.jar && \
-touch $JBOSS_HOME/standalone/deployments/site.war.dodeploy
+rm -rf $JBOSS_HOME/standalone/deployments/kie-server-archive.war
 
 # Set right permissions for jboss user.
 RUN chown -R jboss:jboss $JBOSS_HOME/standalone/deployments/* && \
