--- a/kie-wb/src/main/docker/wildfly/Dockerfile
+++ b/kie-wb/src/main/docker/wildfly/Dockerfile
@@ -1,19 +1,19 @@
 ####### BASE ############
-FROM jboss/wildfly:8.1.0.Final
+FROM jboss/wildfly:10.0.0.Final
 
 ####### MAINTAINER ############
 MAINTAINER "Roger Martinez" "romartin@redhat.com"
 
 ####### ENVIRONMENT ############
-ENV JAVA_OPTS -XX:MaxPermSize=256m -Xms256m -Xmx512m
+ENV JAVA_OPTS -Xms256m -Xmx1024m
 ENV JBOSS_BIND_ADDRESS 0.0.0.0
 ENV KIE_CONNECTION_URL "jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE"
 ENV KIE_CONNECTION_DRIVER h2
 ENV KIE_CONNECTION_USER sa
 ENV KIE_CONNECTION_PASSWORD sa
 ENV KIE_CONNECTION_DATABASE kie
-LABEL org.kie.kie-wb.artifact=org.kie:kie-wb-distribution-wars:war:wildfly8
-LABEL org.jbpm.jbpm-dashboard.artifact=org.jbpm.dashboard:jbpm-dashboard-distributions:war:wildfly8
+LABEL org.kie.kie-wb.artifact=org.kie:kie-wb-distribution-wars:war:wildfly10
+LABEL org.jbpm.jbpm-dashboard.artifact=org.jbpm.dashboard:jbpm-dashboard-distributions:war:wildfly10
 
 ####### SYTEM USERS FOR DEVELOPMENT ############
 USER root
@@ -21,19 +21,19 @@ USER root
 RUN echo "root:rootman" | chpasswd && \
 echo "jboss:jboss" | chpasswd
 
-####### KIE-WB & WILDFLY8 CONFIG FILES ############
-# Latest WAR from Maven repository & Custom Wildfly configuration files
+####### KIE-WB & WildFly10 CONFIG FILES ############
+# Latest WAR from Maven repository & Custom WildFly configuration files
 # There is an issue in Docker with ADD command.
 # When a file is added into the container's filesystem, the file owner is always root, instead of the current running user.
 # See https://github.com/docker/docker/issues/5110
 # The workaround is doing a chown using root user and then switchback to jboss user.
 
-# Wildfly custom configuration.
+# WildFly custom configuration.
 ADD etc/kie-wb-users.properties $JBOSS_HOME/standalone/configuration/kie-wb-users.properties
 ADD etc/kie-wb-roles.properties $JBOSS_HOME/standalone/configuration/kie-wb-roles.properties
 ADD etc/standalone-full-kie-wb.xml $JBOSS_HOME/standalone/configuration/standalone-full-kie-wb.xml
 
-# Custom kie-wb Wildfly startup scripts.
+# Custom kie-wb WildFly startup scripts.
 ADD etc/start_kie-wb.sh $JBOSS_HOME/bin/start_kie-wb.sh
 ADD etc/update-jpa-config.sh $JBOSS_HOME/bin/update-jpa-config.sh
 
@@ -45,19 +45,13 @@ ADD maven/dashbuilder.war $JBOSS_HOME/standalone/deployments/dashbuilder-archive
 ADD maven/modules/kie-wildfly-mysql-module.tar.gz $JBOSS_HOME/modules/system/layers/base
 ADD maven/modules/kie-wildfly-postgres-module.tar.gz $JBOSS_HOME/modules/system/layers/base
 
-# The project site report for the build
-ADD maven/site $JBOSS_HOME/standalone/deployments/site.war
-
 # Work with unpacked WAR archives in WildFly, so other images can override webapp files (such as persistence.xml,etc)
 RUN unzip -q -d $JBOSS_HOME/standalone/deployments/kie-wb.war $JBOSS_HOME/standalone/deployments/kie-wb-archive.war && \
 touch $JBOSS_HOME/standalone/deployments/kie-wb.war.dodeploy && \
 rm -rf $JBOSS_HOME/standalone/deployments/kie-wb-archive.war && \
 unzip -q -d $JBOSS_HOME/standalone/deployments/dashbuilder.war $JBOSS_HOME/standalone/deployments/dashbuilder-archive.war && \
 touch $JBOSS_HOME/standalone/deployments/dashbuilder.war.dodeploy && \
-rm -rf $JBOSS_HOME/standalone/deployments/dashbuilder-archive.war && \
-unzip -q -d $JBOSS_HOME/standalone/deployments/site.war $JBOSS_HOME/standalone/deployments/site.war/kie-wb-site.jar && \
-rm -rf $JBOSS_HOME/standalone/deployments/site.war/kie-wb-site.jar && \
-touch $JBOSS_HOME/standalone/deployments/site.war.dodeploy
+rm -rf $JBOSS_HOME/standalone/deployments/dashbuilder-archive.war
 
 # Copy jboss-all.xml for Dashbuilder webapp, it must be deployed after kie-wb.
 ADD etc/jboss-all.xml $JBOSS_HOME/standalone/deployments/dashbuilder.war/META-INF/jboss-all.xml
