--- a/kie-wb/pom.xml
+++ b/kie-wb/pom.xml
@@ -166,7 +166,7 @@
       </plugin>
 
       <plugin>
-        <groupId>org.jolokia</groupId>
+        <groupId>io.fabric8</groupId>
         <artifactId>docker-maven-plugin</artifactId>
         <configuration>
           <!-- KIE Images. -->
@@ -176,8 +176,8 @@
               <name>${docker.kie.repository}/kie-wb-wildfly8:${docker.build.kie.tag}</name>
               <alias>kie-wb-wildfly8-${docker.build.kie.tag}-h2</alias>
               <build>
+                <dockerFileDir>${project.build.outputDirectory}/wildfly</dockerFileDir>
                 <assembly>
-                  <dockerFileDir>${project.build.outputDirectory}/wildfly</dockerFileDir>
                   <descriptor>${pom.basedir}/src/main/assembly/assembly-kie-wb-wildfly8.xml</descriptor>
                 </assembly>
               </build>
@@ -209,8 +209,8 @@
               <name>${docker.kie.repository}/kie-wb-eap64:${docker.build.kie.tag}</name>
               <alias>kie-wb-eap64-${docker.build.kie.tag}-h2</alias>
               <build>
+                <dockerFileDir>${project.build.outputDirectory}/eap</dockerFileDir>
                 <assembly>
-                  <dockerFileDir>${project.build.outputDirectory}/eap</dockerFileDir>
                   <descriptor>${pom.basedir}/src/main/assembly/assembly-kie-wb-eap64.xml</descriptor>
                 </assembly>
               </build>
@@ -242,8 +242,8 @@
               <name>${docker.kie.repository}/kie-wb-tomcat7:${docker.build.kie.tag}</name>
               <alias>kie-wb-tomcat7-${docker.build.kie.tag}-h2</alias>
               <build>
+                <dockerFileDir>${project.build.outputDirectory}/tomcat</dockerFileDir>
                 <assembly>
-                  <dockerFileDir>${project.build.outputDirectory}/tomcat</dockerFileDir>
                   <descriptor>${pom.basedir}/src/main/assembly/assembly-kie-wb-tomcat7.xml</descriptor>
                 </assembly>
               </build>
