--- a/kie-drools-wb/pom.xml
+++ b/kie-drools-wb/pom.xml
@@ -144,7 +144,7 @@
         </executions>
       </plugin>
       <plugin>
-        <groupId>org.jolokia</groupId>
+        <groupId>io.fabric8</groupId>
         <artifactId>docker-maven-plugin</artifactId>
         <configuration>
           <!-- KIE Images. -->
@@ -154,8 +154,8 @@
               <name>${docker.kie.repository}/kie-drools-wb-wildfly8:${docker.build.kie.tag}</name>
               <alias>kie-drools-wb-wildfly8-${docker.build.kie.tag}-h2</alias>
               <build>
+                <dockerFileDir>${project.build.outputDirectory}/wildfly</dockerFileDir>
                 <assembly>
-                  <dockerFileDir>${project.build.outputDirectory}/wildfly</dockerFileDir>
                   <descriptor>${pom.basedir}/src/main/assembly/assembly-kie-drools-wb-wildfly8.xml
                   </descriptor>
                 </assembly>
@@ -188,8 +188,8 @@
               <name>${docker.kie.repository}/kie-drools-wb-eap64:${docker.build.kie.tag}</name>
               <alias>kie-drools-wb-eap64-${docker.build.kie.tag}-h2</alias>
               <build>
+                <dockerFileDir>${project.build.outputDirectory}/eap</dockerFileDir>
                 <assembly>
-                  <dockerFileDir>${project.build.outputDirectory}/eap</dockerFileDir>
                   <descriptor>${pom.basedir}/src/main/assembly/assembly-kie-drools-wb-eap64.xml</descriptor>
                 </assembly>
               </build>
@@ -221,8 +221,8 @@
               <name>${docker.kie.repository}/kie-drools-wb-tomcat7:${docker.build.kie.tag}</name>
               <alias>kie-drools-wb-tomcat7-${docker.build.kie.tag}-h2</alias>
               <build>
+                <dockerFileDir>${project.build.outputDirectory}/tomcat</dockerFileDir>
                 <assembly>
-                  <dockerFileDir>${project.build.outputDirectory}/tomcat</dockerFileDir>
                   <descriptor>${pom.basedir}/src/main/assembly/assembly-kie-drools-wb-tomcat7.xml</descriptor>
                 </assembly>
               </build>
