--- a/uf-dashbuilder/pom.xml
+++ b/uf-dashbuilder/pom.xml
@@ -140,7 +140,7 @@
       </plugin>
 
       <plugin>
-        <groupId>org.jolokia</groupId>
+        <groupId>io.fabric8</groupId>
         <artifactId>docker-maven-plugin</artifactId>
         <configuration>
           <images>
@@ -149,8 +149,8 @@
               <name>${docker.kie.repository}/uf-dashbuilder-wildfly8:${docker.build.dashbuilder.tag}</name>
               <alias>uf-dashbuilder-wildfly8-${docker.build.dashbuilder.tag}</alias>
               <build>
+                <dockerFileDir>${project.build.outputDirectory}/wildfly</dockerFileDir>
                 <assembly>
-                  <dockerFileDir>${project.build.outputDirectory}/wildfly</dockerFileDir>
                   <descriptor>${pom.basedir}/src/main/assembly/assembly-dashbuilder-wildfly8.xml
                   </descriptor>
                 </assembly>
@@ -183,8 +183,8 @@
               <name>${docker.kie.repository}/uf-dashbuilder-eap64:${docker.build.dashbuilder.tag}</name>
               <alias>uf-dashbuilder-eap64-${docker.build.dashbuilder.tag}</alias>
               <build>
+                <dockerFileDir>${project.build.outputDirectory}/eap</dockerFileDir>
                 <assembly>
-                  <dockerFileDir>${project.build.outputDirectory}/eap</dockerFileDir>
                   <descriptor>${pom.basedir}/src/main/assembly/assembly-dashbuilder-eap64.xml
                   </descriptor>
                 </assembly>
@@ -217,8 +217,8 @@
               <name>${docker.kie.repository}/uf-dashbuilder-tomcat7:${docker.build.dashbuilder.tag}</name>
               <alias>uf-dashbuilder-tomcat7-${docker.build.dashbuilder.tag}</alias>
               <build>
+                <dockerFileDir>${project.build.outputDirectory}/tomcat</dockerFileDir>
                 <assembly>
-                  <dockerFileDir>${project.build.outputDirectory}/tomcat</dockerFileDir>
                   <descriptor>${pom.basedir}/src/main/assembly/assembly-dashbuilder-tomcat7.xml
                   </descriptor>
                 </assembly>
