--- a/kie-server/pom.xml
+++ b/kie-server/pom.xml
@@ -134,7 +134,7 @@
                   <port>kieserver.wf8.http.port:8080</port>
                 </ports>
                 <wait>
-                  <log>Deployed "kie-server\.war"</log>
+                  <log>Deployed "kie-server.war"</log>
                   <time>${docker.run.timeout}</time>
                 </wait>
                 <log>
@@ -167,7 +167,7 @@
                   <port>kieserver.eap64.http.port:8080</port>
                 </ports>
                 <wait>
-                  <log>Deployed "kie-server\.war"</log>
+                  <log>Deployed "kie-server.war"</log>
                   <time>${docker.run.timeout}</time>
                 </wait>
                 <log>
@@ -201,7 +201,7 @@
                   <port>kieserver.t7.http.port:8080</port>
                 </ports>
                 <wait>
-                  <log>Deployment of web application directory \/usr\/local\/tomcat\/webapps\/kie-server has finished in</log>
+                  <log>Deployment of web application directory /usr/local/tomcat/webapps/kie-server has finished in</log>
                   <time>${docker.run.timeout}</time>
                 </wait>
                 <log>
