added EAP 7 images

--- a/kie-artifacts/pom.xml
+++ b/kie-artifacts/pom.xml
@@ -26,6 +26,12 @@
       <type>war</type>
       <classifier>tomcat8</classifier>
     </dependency>
+    <dependency>
+      <groupId>org.kie</groupId>
+      <artifactId>kie-wb-distribution-wars</artifactId>
+      <type>war</type>
+      <classifier>eap7</classifier>
+    </dependency>
 
     <dependency>
       <groupId>org.kie</groupId>
@@ -39,6 +45,13 @@
       <type>war</type>
       <classifier>tomcat8</classifier>
     </dependency>
+    <dependency>
+      <groupId>org.kie</groupId>
+      <artifactId>kie-drools-wb-distribution-wars</artifactId>
+      <type>war</type>
+      <classifier>eap7</classifier>
+    </dependency>
+
 
     <dependency>
       <groupId>org.kie.server</groupId>
