--- a/kie-wb/pom.xml
+++ b/kie-wb/pom.xml
@@ -26,6 +26,12 @@
       <type>war</type>
       <classifier>tomcat8</classifier>
     </dependency>
+    <dependency>
+      <groupId>org.kie</groupId>
+      <artifactId>kie-wb-distribution-wars</artifactId>
+      <type>war</type>
+      <classifier>eap7</classifier>
+    </dependency>
 
     <!-- Additional dependencies for Tomcat 8 -->
     <dependency>
@@ -77,6 +83,19 @@
       <classifier>wildfly-postgres</classifier>
       <type>tar.gz</type>
     </dependency>
+    <dependency>
+      <groupId>org.kie.docker</groupId>
+      <artifactId>kie-jboss-modules</artifactId>
+      <classifier>eap-mysql</classifier>
+      <type>tar.gz</type>
+    </dependency>
+    <dependency>
+      <groupId>org.kie.docker</groupId>
+      <artifactId>kie-jboss-modules</artifactId>
+      <classifier>eap-postgres</classifier>
+      <type>tar.gz</type>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -115,6 +134,39 @@
                 </env>
                 <ports>
                   <port>kiewb.wf10.http.port:8080</port>
+                </ports>
+                <wait>
+                  <log>Deployed "kie-wb\.war"</log>
+                  <time>${docker.run.timeout}</time>
+                </wait>
+                <log>
+                  <prefix>DEMO</prefix>
+                  <date>ISO8601</date>
+                  <color>blue</color>
+                </log>
+              </run>
+            </image>
+            <!-- KIE Workbench latest SNAPSHOT & EAP7 -->
+            <image>
+              <name>${docker.kie.repository}/kie-wb-eap7:${docker.build.kie.tag}</name>
+              <alias>kie-wb-eap7-${docker.build.kie.tag}-h2</alias>
+              <build>
+                <assembly>
+                  <dockerFileDir>${project.build.outputDirectory}/eap</dockerFileDir>
+                  <descriptor>${pom.basedir}/src/main/assembly/assembly-kie-wb-eap7.xml</descriptor>
+                </assembly>
+              </build>
+              <run>
+                <namingStrategy>alias</namingStrategy>
+                <env>
+                  <KIE_CONNECTION_URL>jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE</KIE_CONNECTION_URL>
+                  <KIE_CONNECTION_DRIVER>h2</KIE_CONNECTION_DRIVER>
+                  <KIE_CONNECTION_USER>sa</KIE_CONNECTION_USER>
+                  <KIE_CONNECTION_PASSWORD>sa</KIE_CONNECTION_PASSWORD>
+                  <KIE_CONNECTION_DATABASE>kie</KIE_CONNECTION_DATABASE>
+                </env>
+                <ports>
+                  <port>kiewb.eap7.http.port:8080</port>
                 </ports>
                 <wait>
                   <log>Deployed "kie-wb\.war"</log>
