--- a/kie-jboss-modules/pom.xml
+++ b/kie-jboss-modules/pom.xml
@@ -43,12 +43,17 @@
             <descriptor>src/main/assembly/wildfly/assembly-wildfly-mysql.xml</descriptor>
             <!-- JBoss WildFly - PostgreSQL driver module. -->
             <descriptor>src/main/assembly/wildfly/assembly-wildfly-postgres.xml</descriptor>
+            <!-- JBoss EAP - MySQL driver module. -->
+            <descriptor>src/main/assembly/eap/assembly-eap-mysql.xml</descriptor>
+            <!-- JBoss EAP - PostgreSQL driver module. -->
+            <descriptor>src/main/assembly/eap/assembly-eap-postgres.xml</descriptor>
           </descriptors>
           <archive>
             <addMavenDescriptor>false</addMavenDescriptor>
           </archive>
         </configuration>
       </plugin>
+      
     </plugins>
   </build>
   
