--- a/kie-server/pom.xml
+++ b/kie-server/pom.xml
@@ -112,6 +112,39 @@
                 </log>
               </run>
             </image>
+            <!-- iKIE Server latest SNAPSHOT & EAP7 -->
+            <image>
+              <name>${docker.kie.repository}/kie-server-eap7:${docker.build.kie.tag}</name>
+              <alias>kie-server-eap7-${docker.build.kie.tag}-h2</alias>
+              <build>
+                <assembly>
+                  <dockerFileDir>${project.build.outputDirectory}/eap</dockerFileDir>
+                  <descriptor>${pom.basedir}/src/main/assembly/assembly-kie-server-eap7.xml</descriptor>
+                </assembly>
+              </build>
+              <run>
+                <namingStrategy>alias</namingStrategy>
+                <env>
+                  <KIE_CONNECTION_URL>jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE</KIE_CONNECTION_URL>
+                  <KIE_CONNECTION_DRIVER>h2</KIE_CONNECTION_DRIVER>
+                  <KIE_CONNECTION_USER>sa</KIE_CONNECTION_USER>
+                  <KIE_CONNECTION_PASSWORD>sa</KIE_CONNECTION_PASSWORD>
+                  <KIE_CONNECTION_DATABASE>kie</KIE_CONNECTION_DATABASE>
+                </env>
+                <ports>
+                  <port>kieserver.eap7.http.port:8080</port>
+                </ports>
+                <wait>
+                  <log>Deployed "kie-server\.war"</log>
+                  <time>${docker.run.timeout}</time>
+                </wait>
+                <log>
+                  <prefix>DEMO</prefix>
+                  <date>ISO8601</date>
+                  <color>blue</color>
+                </log>
+              </run>
+            </image>
             <!-- KIE Server & Tomcat8. -->
             <image>
               <name>${docker.kie.repository}/kie-server-tomcat8:${docker.build.kie.tag}</name>
